frontend/public/assets/css/style.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

nav li{float:left; display:block; padding:5px 10px;}
nav ul{padding:0;}
nav ul:after{content:""; display:block; clear:both;}

.absolute{position:absolute;} 
/*.vis-body{background-color:rgba(255, 255, 255, 0.4);}*/
.comment-outer{z-index:5; background:#fff;}
.comment-inner{position:relative; padding:10px 20px;}
.vis-comments{position:relative; display:block;}
.vis-marker{width:30px; height:30px; border:#000 2px solid;}
.new-marker{background:#FFEE00;}
.saved-marker{background:#FF0000;}

